# swarm

./: .dockerignore  .env.example  .gitignore  .gitleaks.toml  .gitleaksignore  .pre-commit-config.yaml  Brand.html  CLAUDE.md  Makefile  README.md  SECURITY.md  alembic.ini  conftest.py  docker-compose.prod.yml  docker-compose.yml  pyproject.toml  swarm-thesis.md
.claude/: launch.json
.github/: dependabot.yml
.github/workflows/: chaos-test.yml  codeql.yml  dependency-review.yml  image-build.yml  image-scan.yml  image-sign.yml  lint.yml  load-test.yml  sast.yml  secret-scanning.yml  test.yml  zap-baseline.yml
adapters/: __init__.py  _stub.py  base.py
adapters/autel/: __init__.py  adapter.py
adapters/dji_cloud/: __init__.py  adapter.py
adapters/dji_psdk/: __init__.py  adapter.py
adapters/mavlink/: __init__.py  adapter.py  fake_endpoint.py  runner.py
adapters/parrot/: __init__.py  adapter.py
adapters/simulated/: __init__.py  adapter.py
adapters/simulator/: __init__.py  runner.py
adapters/skydio/: __init__.py  adapter.py
adapters/tests/: conformance.py  test_registry.py  test_simulated_conformance.py  test_stub_conformance.py
backend/: Dockerfile
backend/app/: bus_consumer.py  fleet.py  hub.py  main.py  security.py  state.py
backend/tests/: conftest.py  test_alembic_migration.py  test_api_smoke.py  test_auth_jwt.py  test_auth_mfa.py  test_auth_passwords.py  test_auth_revocation.py  test_auth_routes.py  test_auth_store.py  test_bus_consumer_security.py  test_command_source.py  test_db_session.py  test_emergency_rtl.py  test_evidence_alembic.py  test_fleet.py  test_metrics.py  test_persistence.py  test_persistence_api.py  test_persistence_integration.py  test_phase1_api.py  test_phase6_admin.py  test_phase6i_compliance.py  test_phase7c_alembic.py  test_phase7c_event_source_persistence.py  test_rbac.py  test_ready.py  test_request_id.py  test_runtime_guards.py  test_security.py  test_stream_broadcast.py  test_structlog_redaction.py  test_ws_auth.py
core/swarm_core/: __init__.py  allocator.py  fsm.py  geometry.py  messages.py  missions.py  rate_limit.py  runtime.py  streams.py  voice.py
docs/: CONVENTIONS.md  STATUS-archive.md  STATUS.md  architecture.md  design-system.md  vision.md
docs/adapters/: mavlink-setup.md
docs/adr/: 0001-monorepo-and-stack.md  0002-no-ros2-no-gazebo-yet.md  0003-drone-adapter-interface.md  0004-design-system-as-canonical-source.md
docs/api/: openapi.yaml  ws-contract.md
docs/architecture/: overview.md
docs/bench/: phase5-validation.md  phase9-sitl-validation.md
docs/compliance/: dpa-template.md  drone-regulations.md  gdpr.md  retention.md
docs/cv/: cv-live.md  phase-7d.md
docs/design-system/: v1.html
docs/dev/: onboarding.md  release-process.md
docs/observability/: overview.md
docs/operator/: acceptance.md  manual.md  training.md
docs/ops/: deploy.md  disaster-recovery.md  drone-day-checklist.md  migrations.md  performance.md  runbook.md
docs/plan/: phase-6f.md  phase-7c.md  phase-7e.md  pre-yc-build-plan.md  swarm-roadmap-evidence-to-scale.md  swarmos-roadmap.md  three-month-code-plan.md  ws2-demo-breadth.md
docs/product/: patrol-cell.md
docs/security/: auth.md  disclosure.md  incident-response.md  pentest-scope.md  threat-model.md
docs/yc/: README.md  application-draft.md  cofounder-spec.md  competitive-and-market.md  customer-discovery-kit.md  demo-recording-runbook.md  interview-prep.md  m1-a11y-report.md  m1-vo-script.md  readiness-and-gaps.md  supporting-answers.md
frontend/: .gitignore  .npmrc  .pnpmfile.cjs  .pnpmrc  Dockerfile  eslint.config.mjs  next.config.mjs  package-lock.json  package.json  pnpm-lock.yaml  pnpm-workspace.yaml  tailwind.config.ts  tsconfig.json  vitest.config.ts  vitest.setup.ts
frontend/app/: layout.tsx  page.tsx
frontend/components/: ActionRail.tsx  AnomalyCard.tsx  AnomalySummary.tsx  AuthGate.tsx  AutonomyDecision.tsx  AutonomyMetrics.tsx  AwarenessScore.tsx  CommandTimeline.tsx  DockCard.tsx  DockDetail.tsx  EmergencyStop.tsx  EventFeed.tsx  EvidenceBlock.tsx  Eyebrow.tsx  FleetGrid.tsx  Footer.tsx  HeadBar.tsx  HeatOverlay.tsx  LinkHealth.tsx  LiveFeedFrame.tsx  Map.tsx  MobileAlertScreen.tsx  MobileAnomalyScreen.tsx  NextPatrol.tsx  QuietPanel.tsx  RightRail.tsx  RiskState.tsx  RouteLayer.tsx  SceneHeader.tsx  SectorLayer.tsx  StatusPill.tsx  TacticalBasemap.tsx  TerritoryControl.tsx  UnitDetail.tsx  UnitReadiness.tsx  WeatherLock.tsx
frontend/icons/: index.tsx
frontend/lib/: api.ts  auth.tsx  autonomy.test.ts  autonomy.ts  copy.ts  derive.ts  metrics.test.ts  metrics.ts  redirect.ts  state.tsx  tactical.ts  tokens.ts  ws.ts
frontend/styles/: globals.css
infra/backup/: Dockerfile
infra/cert-manager/: issuer-letsencrypt-prod.yaml  issuer-letsencrypt-staging.yaml
infra/config/: autonomy.yaml  autonomy_baseline.yaml  operators.example.yaml
infra/grafana/: alerts.yml  datasource.yaml
infra/k8s/: configmap-site.yaml  cronjob-backup.yaml  deployment-backend.yaml  deployment-frontend.yaml  hpa-backend.yaml  ingress.yaml  namespace.yaml  networkpolicy.yaml  secret.example.yaml  service-backend.yaml  service-frontend.yaml  servicemonitor.yaml
scripts/: backup_restore_drill.sh  bootstrap_auth_dev.sh  bootstrap_dev_env.sh  cv_live_report.py  demo_scenario.sh  demo_wildfire.sh  dev_up.sh  m1_capture_mobile.py  m1_capture_screenshots.py  m1_debug_layout.py  m1_debug_swarmmap.py  m1_debug_tiles.py  m1_debug_webgl.py  normalize_sim_feed.sh  phase5_sitl_probe.py  render_sim_feed.py  restore_postgres.sh  scenario_metrics.py  shadow_divergence.py  verify_cv_assets_integrity.py  verify_pymavlink_integrity.py
swarm_os/: __init__.py  autonomy.py  autonomy_config.py  awareness.py  command_bus.py  coordinator.py  event_detector.py  fsm.py  policy.py  safety.py  scheduler.py  sectors.py  shadow.py  shadow_oracle.py  sites.py  state.py
tests/: test_phase6e_deploy.py  test_phase6g_dr.py  test_phase6h_docs.py  test_phase6i_compliance_docs.py  test_phase6j_testing.py  test_phase7c_brand.py  test_phase7c_voice.py  test_phase7e_demo.py  test_phase9_sitl_probe.py
(+190 files in other folders)
