[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "swarm-os"
version = "0.1.0"
description = "SWARM OS — autonomous coordination + interoperability layer for heterogeneous drone fleets."
requires-python = ">=3.11"
readme = "README.md"
license = { text = "Proprietary" }
authors = [{ name = "SWARM" }]
dependencies = [
    "pydantic>=2.6",
    "fastapi>=0.110",
    "uvicorn[standard]>=0.27",
    "websockets>=12",
    "redis>=5.0",
    "sqlalchemy>=2.0",
    "asyncpg>=0.29",
    "alembic>=1.13",
    "httpx>=0.27",
    "anyio>=4.3",
    "structlog>=24.1",
    "shapely>=2.0",
    "pyproj>=3.6",
]

[project.optional-dependencies]
mavlink = ["mavsdk>=2.0", "pymavlink>=2.4.40"]
dji = ["paho-mqtt>=2.0"]
dev = [
    "pytest>=8.0",
    "pytest-asyncio>=0.23",
    "pytest-cov>=4.1",
    "ruff>=0.4",
    "mypy>=1.9",
    "types-redis",
]

[tool.setuptools.packages.find]
where = ["core", "adapters", "orchestrator", "sim", "backend"]
namespaces = true

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "I", "B", "UP", "N", "SIM", "ASYNC", "RUF"]
ignore = [
    "E501",   # line length handled by formatter
    "N818",   # exception names like `NotConfigured`/`IllegalTransition` are deliberate
    "ASYNC110", # polling loops are intentional in commit 1; refactor to asyncio.Event is a later perf pass
    "B008",   # `= SomeFrozenDataclass()` defaults are fine for immutable types
    "UP042",  # `(str, Enum)` is more portable than `StrEnum` across linters / pydantic tooling
]

[tool.mypy]
python_version = "3.11"
strict = true
plugins = ["pydantic.mypy"]

[[tool.mypy.overrides]]
module = ["mavsdk.*", "pymavlink.*", "paho.*"]
ignore_missing_imports = true

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["core/swarm_core/tests", "adapters/tests", "orchestrator/swarm_orchestrator/tests", "backend/tests"]
