[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "swarm-os"
version = "0.1.0"
description = "SWARM OS — autonomous coordination + interoperability layer for heterogeneous drone fleets."
requires-python = ">=3.11"
readme = "README.md"
license = { text = "Proprietary" }
authors = [{ name = "SWARM" }]
dependencies = [
    # Pinned tightly enough that a transitive bump can't silently change
    # behavior; Dependabot lifts the upper bound deliberately.
    "pydantic>=2.6,<3",
    "fastapi>=0.110,<1",
    "uvicorn[standard]>=0.27,<1",
    "websockets>=12,<14",
    "redis>=5.0,<6",
    "sqlalchemy>=2.0,<3",
    "asyncpg>=0.29,<1",
    "alembic>=1.13,<2",
    "httpx>=0.27,<1",
    "anyio>=4.3,<5",
    "structlog>=24.1,<26",
    "shapely>=2.0,<3",
    "pyproj>=3.6,<4",
]

[project.optional-dependencies]
mavlink = ["mavsdk>=2.0,<3", "pymavlink>=2.4.40,<3"]
dji = ["paho-mqtt>=2.0,<3"]
dev = [
    "pytest>=9.0.3,<10",
    "pytest-asyncio>=0.23,<2",
    "pytest-cov>=4.1,<8",
    "ruff>=0.4,<1",
    "mypy>=1.9,<2",
    "types-redis",
    # Security / supply chain
    "bandit[toml]>=1.7,<2",
    "pip-audit>=2.7,<3",
    "detect-secrets>=1.5,<2",
]

[tool.setuptools.packages.find]
where = ["core", "adapters", "orchestrator", "sim", "backend"]
namespaces = true

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "I", "B", "UP", "N", "SIM", "ASYNC", "RUF"]
ignore = [
    "E501",   # line length handled by formatter
    "N818",   # exception names like `NotConfigured`/`IllegalTransition` are deliberate
    "ASYNC110", # polling loops are intentional in commit 1; refactor to asyncio.Event is a later perf pass
    "B008",   # `= SomeFrozenDataclass()` defaults are fine for immutable types
    "UP042",  # `(str, Enum)` is more portable than `StrEnum` across linters / pydantic tooling
]

[tool.mypy]
python_version = "3.11"
strict = true
warn_unused_ignores = false
plugins = ["pydantic.mypy"]

[[tool.mypy.overrides]]
module = ["mavsdk.*", "pymavlink.*", "paho.*"]
ignore_missing_imports = true

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = [
    "core/swarm_core/tests",
    "adapters/tests",
    "orchestrator/swarm_orchestrator/tests",
    "backend/tests",
    "tests/fuzz",
]

[tool.bandit]
exclude_dirs = [
    ".venv",
    "node_modules",
    ".next",
    "tests",
    "frontend",
]
skips = [
    "B101",  # assert_used — pytest assertions
    "B311",  # random — fuzz tests use it deliberately
]
