[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "swarm-os"
version = "0.1.0"
description = "SWARM OS — autonomous coordination + interoperability layer for heterogeneous drone fleets."
requires-python = ">=3.11"
readme = "README.md"
license = { text = "Proprietary" }
authors = [{ name = "SWARM" }]
dependencies = [
    # Pinned tightly enough that a transitive bump can't silently change
    # behavior; Dependabot lifts the upper bound deliberately.
    "pydantic>=2.6,<3",
    "fastapi>=0.110,<1",
    "uvicorn[standard]>=0.27,<1",
    "websockets>=12,<17",
    "redis>=5.0,<8",
    # `[asyncio]` extra pulls greenlet, which SQLAlchemy needs for the async
    # session/engine path (PEP 555 emulation). Declared explicitly so a
    # future SA pin can't quietly drop the transitive dep.
    "sqlalchemy[asyncio]>=2.0,<3",
    "asyncpg>=0.29,<1",
    "alembic>=1.13,<2",
    "httpx>=0.27,<1",
    "anyio>=4.3,<5",
    "structlog>=24.1,<26",
    "shapely>=2.0,<3",
    "pyproj>=3.6,<4",
    # Phase 6.A: site policy config is YAML on disk. Pinned explicitly so
    # the dependency surface is not silently provided by a dev-only tool.
    "pyyaml>=6,<7",
    # Phase 6.C: JWT auth. Pinned explicitly so the auth surface does not
    # silently inherit `pyjwt` as a transitive of `redis` — a redis bump
    # could otherwise drop the lib from under us.
    "pyjwt>=2.8,<3",
    # Phase 6.D: Prometheus metrics exposition. Pinned explicitly — the
    # /metrics endpoint is part of the supported surface and we don't want
    # a transitive dep flip to remove the client.
    "prometheus-client>=0.20,<1",
]

[project.optional-dependencies]
# Real flight dependencies stay optional. Phase 5 uses pymavlink directly;
# MAVSDK remains excluded because its protobuf/gRPC stack is outside the
# verified dependency surface.
mavlink = ["pymavlink>=2.4.40,<3"]
dji = ["paho-mqtt>=2.0,<3"]
# Phase 6.D — OpenTelemetry tracing is opt-in. The roadmap calls traces
# "opzionale" so we don't take the audit surface unless the deploy
# requests it via `SWARM_OTLP_ENDPOINT`. When the extra is installed the
# fastapi instrumentor wires itself only if the env var is set.
otel = [
    "opentelemetry-sdk>=1.25,<2",
    "opentelemetry-exporter-otlp-proto-http>=1.25,<2",
    "opentelemetry-instrumentation-fastapi>=0.46b0,<1",
]
dev = [
    "pytest>=9.0.3,<10",
    "pytest-asyncio>=0.23,<2",
    "pytest-cov>=4.1,<8",
    "ruff>=0.4,<1",
    "mypy>=1.9,<3",
    "types-redis",
    "types-PyYAML>=6,<7",
    # Phase 4: in-process async SQLite for persistence tests (no Postgres needed).
    "aiosqlite>=0.20,<1",
    # Security / supply chain
    "bandit[toml]>=1.7,<2",
    "pip-audit>=2.7,<3",
    "detect-secrets>=1.5,<2",
]

[tool.setuptools.packages.find]
where = ["core", "adapters", "orchestrator", "sim", "backend", "."]
namespaces = true
# pytest discovers test packages via `testpaths`; we don't ship them.
# Newer setuptools collapses overlapping namespace roots (top-level
# `tests/` + `backend/tests/`) into a single namespace package and then
# fails when the `fuzz` subpackage can't be found under both roots.
exclude = ["tests", "tests.*", "*.tests", "*.tests.*"]

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "I", "B", "UP", "N", "SIM", "ASYNC", "RUF"]
ignore = [
    "E501",   # line length handled by formatter
    "N818",   # exception names like `NotConfigured`/`IllegalTransition` are deliberate
    "ASYNC110", # polling loops are intentional in commit 1; refactor to asyncio.Event is a later perf pass
    "B008",   # `= SomeFrozenDataclass()` defaults are fine for immutable types
    "UP042",  # `(str, Enum)` is more portable than `StrEnum` across linters / pydantic tooling
]

[tool.mypy]
python_version = "3.11"
strict = true
warn_unused_ignores = false
plugins = ["pydantic.mypy"]

[[tool.mypy.overrides]]
module = ["mavsdk.*", "pymavlink.*", "paho.*", "opentelemetry.*"]
ignore_missing_imports = true

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = [
    "core/swarm_core/tests",
    "adapters/tests",
    "adapters/mavlink/tests",
    "orchestrator/swarm_orchestrator/tests",
    "backend/tests",
    "swarm_os/tests",
    "tests/fuzz",
    "tests/load",
    "tests/e2e",
    "tests/test_phase6e_deploy.py",
]
markers = [
    # Phase 6.F — in-process p95 latency smoke (driven by tests/load/).
    # Runs in the `load-smoke` job and on every push; the slow soak runs
    # out-of-process via `python -m tests.load.driver`, gated by the
    # weekly `.github/workflows/load-test.yml` workflow.
    "load_smoke: in-process load smoke (Phase 6.F).",
    # Phase 6.F — chaos probes that pause/kill an external dep. Not run
    # by default; invoked through `make chaos-redis` / `make chaos-backend`.
    "chaos: external-component chaos probe (Phase 6.F).",
    # Phase 6.J — end-to-end suite under tests/e2e/. Drives the full
    # anomaly lifecycle (pending → verifying → verified → escalation →
    # return → dock) through the real bus + real coordinator + real
    # FastAPI surface. No internal mocks.
    "e2e: end-to-end integration test (Phase 6.J).",
]

[tool.coverage.run]
# Phase 6.J — backend ≥80% gate. The roadmap excludes paths that need
# external infra or hardware-only branches; tests themselves are also
# excluded so the gate measures the SUT, not the harness.
branch = false
omit = [
    "tests/*",
    "*/tests/*",
    "sim/*",
    "*/migrations/*",
    "backend/app/db/migrations/*",
    "adapters/mavlink/*",
    "adapters/dji_cloud/*",
    "adapters/dji_psdk/*",
    "adapters/autel/*",
    "adapters/parrot/*",
    "adapters/skydio/*",
]

[tool.coverage.report]
exclude_lines = [
    "pragma: no cover",
    "raise NotImplementedError",
    "if TYPE_CHECKING:",
]

[tool.bandit]
exclude_dirs = [
    ".venv",
    "node_modules",
    ".next",
    "tests",
    "frontend",
]
skips = [
    "B101",  # assert_used — pytest assertions
    "B311",  # random — fuzz tests use it deliberately
]
